# galois

./: CMakeLists.txt
.github/workflows/: ccpp.yml
tests/: GFPDerivTest.cpp  GaloisFieldOut.cpp  GaloisFieldTest.cpp  GaloisProto.cpp  GaloisShiftProto.cpp
